2019-11-14  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.dg/vect/bb-slp-div-2.c: New test.

2019-11-14  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.dg/vect/bb-slp-pr69907.c: Do not expect BB vectorization
	to fail for aarch64 targets.
	* gcc.dg/vect/no-scevccp-outer-12.c: Expect the test to pass
	on aarch64 targets.
	* gcc.dg/vect/vect-double-reduc-5.c: Likewise.
	* gcc.dg/vect/vect-outer-4e.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_5.c: New test.
	* gcc.target/aarch64/vect_mixed_sizes_6.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_7.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_8.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_9.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_10.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_11.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_12.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_13.c: Likewise.

2019-11-14  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.dg/vect/vect-outer-4f.c: Expect the test to pass on aarch64
	targets.
	* gcc.dg/vect/vect-outer-4g.c: Likewise.
	* gcc.dg/vect/vect-outer-4k.c: Likewise.
	* gcc.dg/vect/vect-outer-4l.c: Likewise.
	* gfortran.dg/vect/vect-8.f90: Expect kernel 24 to be vectorized
	for aarch64.
	* gcc.target/aarch64/vect_mixed_sizes_1.c: New test.
	* gcc.target/aarch64/vect_mixed_sizes_2.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_3.c: Likewise.
	* gcc.target/aarch64/vect_mixed_sizes_4.c: Likewise.

2019-11-14  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.dg/vect/vect-tail-nomask-1.c: Update expected epilogue
	vectorization message.

2019-11-14  Richard Henderson  <richard.henderson@linaro.org>

	* gcc.target/aarch64/asm-flag-1.c: New test.
	* gcc.target/aarch64/asm-flag-3.c: New test.
	* gcc.target/aarch64/asm-flag-5.c: New test.
	* gcc.target/aarch64/asm-flag-6.c: New test.

	* gcc.target/arm/asm-flag-1.c: New test.
	* gcc.target/arm/asm-flag-3.c: New test.